# PiBeat

./: .env.example  .gitignore  README.md  compile_synthdefs.ps1  index.html  package-lock.json  package.json  setup_sc.ps1  start.bat  start.ps1
.github/: copilot-instructions.md
docs/: AGENT_GUIDE.md  DEBUGGING_AGENT.md  LLM_API_COMPATIBILITY.md  PARSER_LIMITATIONS.md  REACTIVE_AGENT_CHANGES.md  REACTIVE_AGENT_FEATURES.md  README.md
examples/: Test1  Test2  Test3  Test4
src/: App.css  App.tsx  _newparser_types.tmp  agent.ts  llm.ts  store.ts  timelineParser.ts  timelineSync.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_sample.rs
src-tauri/capabilities/: default.json
src-tauri/examples/: test_wav.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: effects.rs  engine.rs  mod.rs  parser.rs  recorder.rs  sample.rs  sc_engine.rs  sc_synthdefs.rs  synth.rs
src/components/: AgentChat.tsx  BufferTabs.tsx  CodeEditor.tsx  CuePanel.tsx  EffectsPanel.tsx  HelpPanel.tsx  LogPanel.tsx  SampleBrowser.tsx  SynthBrowser.tsx  TimelineView.tsx  Toolbar.tsx  UserSamplePanel.tsx  WaveformVisualizer.tsx
