[package]
name = "pibeat"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonic_daw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
minimp3 = "0.5"
rand = "0.8"
parking_lot = "0.12"
crossbeam-channel = "0.5"
walkdir = "2"
rubato = "0.15"
dasp_interpolate = "0.11"
dasp_signal = "0.11"
dasp_sample = "0.11"
rosc = "0.10"
tauri-plugin-dialog = "2"

